--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hein Htet Aung</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1>Welcome to my new website</h1>
 </body>
 </html>
